# radix-nft-generator

./: .gitignore  README.md
client/: README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
client/src/lib/components/: Button.svelte
client/src/routes/: +layout.svelte  +page.svelte  Nav.svelte
server/: Cargo.toml
server/src/: main.rs  types.rs
