
[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"

actix-web = "4"
radix-engine-interface = "1.2.0-dev"
radix-transactions = "1.2.0-dev"
sbor = "1.2.0-dev"
scrypto = "1.2.0-dev"
scrypto-test = "1.2.0-dev"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
